se cambia index.html
se cambia inicio.html por index,html

--- a/Contáctanos.html
+++ b/Contáctanos.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Italia para el mundo -Contáctanos</title>
+  <title>Italia para el mundo -Contactanos</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
@@ -16,7 +16,7 @@
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <h1><a href="index.html">Tu mejor destino <span class="logo_colour"></span></a></h1>
-          <h2>-Contáctanos</h2>
+          <h2>-ContÃ¡ctanos</h2>
         </div>
         <div id="contact_details">
           <p>tel:  123 456</p>
@@ -26,11 +26,11 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-           <li class="selected"><a href="Inicio.html">Inicio</a></li>
+           <li class="selected"><a href="index.html">Inicio</a></li>
           <li class="selected"><a href="Noticias.html">Noticias</a></li>
          
           <li class="selected"><a href="Historia.html">Historia</a></li>
-          <li><a href="Contáctanos.html">Contáctanos</a></li>
+          <li><a href="ContÃ¡ctanos.html">ContÃ¡ctanos</a></li>
         </ul>
       </div>
     </div>
@@ -48,7 +48,7 @@
       </div>
       <div id="content">
        
-        <h1>Contáctanos</h1>
+        <h1>ContÃ¡ctanos</h1>
         <p></p>
         <form action="" method="post">
           <div class="form_settings">
@@ -58,7 +58,7 @@
             <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="contact_submitted" value="Enviar" /></p>
           </div>
         </form>
-        <p><br /><br />NOTA: Gracias por escribirnos. Estaremos dando respuesta a su solicitud en las próximas 24 horas.</p>
+        <p><br /><br />NOTA: Gracias por escribirnos. Estaremos dando respuesta a su solicitud en las prÃ³ximas 24 horas.</p>
       </div>
     </div>
     <div id="footer">
