se cambia Contáctanos
se cambia a contactanos

--- a/Contáctanos.html
+++ b/Contáctanos.html
@@ -16,7 +16,7 @@
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <h1><a href="index.html">Tu mejor destino <span class="logo_colour"></span></a></h1>
-          <h2>-Contáctanos</h2>
+          <h2>-Contactanos</h2>
         </div>
         <div id="contact_details">
           <p>tel:  123 456</p>
@@ -30,7 +30,7 @@
           <li class="selected"><a href="Noticias.html">Noticias</a></li>
          
           <li class="selected"><a href="Historia.html">Historia</a></li>
-          <li><a href="Contáctanos.html">Contáctanos</a></li>
+          <li><a href="Contactanos.html">Contactanos</a></li>
         </ul>
       </div>
     </div>
